=============================================================
Version 3.1.3
=============================================================

    - Feature: [import] vat number registration on delivery and billing addresses
    - Bugfix: Recovery of all active shops when searching by token
    - Bugfix: Implementation of dynamic link in templates for JS and CSS scripts

=============================================================
Version 3.1.2
=============================================================

    - Feature: [export] Refactoring and optimization of product data recovery
    - Feature: [export] Add isbn field in export feed for PrestaShop 1.7
    - Bugfix: [import] Moving email templates for PrestaShop 1.7
    - Bugfix: Fixed the module update process

=============================================================
Version 3.1.1
=============================================================

    - Feature: [import] Optimization of the order recovery system
    - Feature: [import] Setting up a cache for synchronizing catalogs ids
    - Feature: [action] Refactoring and optimization of actions on orders
    - Feature: [import] Add semantic search for carrier match
    - Feature: [export] Add price_wholesale field in export feed
    - Bugfix: [import] Updating Mondial Relay data in the specific plugin table
    - Bugfix: [export] Display of disabled products in grid and counter

=============================================================
Version 3.1.0
=============================================================

    - Feature: Registering marketplace data in a json file
    - Feature: Optimization of API calls between PrestaShop and Lengow
    - Feature: Disabling the Lengow tracker and changing the product ID
    - Feature: Add meta_title field in legacy export feed
    - Bugfix: [export] Improved deletion of duplicate headers
    - Bugfix: [action] Management of orders waiting to return from the marketplace