@@ -217,7 +217,7 @@ lengow_setting.lengow_order_id_shippedbymp_title|Orders shipped by marketplace
 lengow_setting.lengow_import_force_product_title|Force products
 lengow_setting.lengow_import_force_product_legend|Enable this option if you want to force the importing of out of stock/inactive products
 lengow_setting.lengow_carrier_semantic_enable_title|I want to activate the semantic matching of carriers option
-lengow_setting.lengow_carrier_semantic_enable_legend|With this option, match the carrier or shipping method indicated by the marketplace with the name of your PrestaShop carriers. This matching will be used only for marketplaces that do not indicate any carrier or shipping method.
+lengow_setting.lengow_carrier_semantic_enable_legend|With this option, match the carrier or shipping method indicated by the marketplace with the name of your PrestaShop carriers.
 lengow_setting.lengow_import_days_title|Synchronize all orders updated since
 lengow_setting.lengow_import_days_legend|Activate this option if you have incorrect pending orders. It lets you re-import all orders that have been processed during this faulty period
 lengow_setting.lengow_import_processing_fee_title|Import processing fee
