@@ -217,7 +217,7 @@ lengow_setting.lengow_order_id_shippedbymp_title|Pedidos enviados de los marketp
 lengow_setting.lengow_import_force_product_title|Forzar los productos
 lengow_setting.lengow_import_force_product_legend|Activa esta opción si deseas forzar la importación de "fuera de stocks" / "productos inactivos"
 lengow_setting.lengow_carrier_semantic_enable_title|Quiero activar la opción de correspondencia semántica de transportistas
-lengow_setting.lengow_carrier_semantic_enable_legend|Con esta opción, haz corresponder el transportista o el método de envío indicado por la marketplace con el nombre de tus transportistas Prestashop.\nEsta correspondencia será utilizada unicamente con las marketplaces que no envien ningún transportista ni método de transporte.
+lengow_setting.lengow_carrier_semantic_enable_legend|Con esta opción, haz corresponder el transportista o el método de envío indicado por la marketplace con el nombre de tus transportistas Prestashop.
 lengow_setting.lengow_import_days_title|Sincronizar todos los pedidos actualizados desde
 lengow_setting.lengow_import_days_legend|Activar esta opción si tiene pedidos pendientes incorrectos. Esto te permite volver a importar todas los pedidos que han sido procesados ​​durante este período con problemas
 lengow_setting.lengow_import_processing_fee_title|Importar las cuotas de procesamiento
