@@ -241,7 +241,7 @@ en:
     lengow_import_force_product_title: "Force products"
     lengow_import_force_product_legend: "Enable this option if you want to force the importing of out of stock/inactive products"
     lengow_carrier_semantic_enable_title: "I want to activate the semantic matching of carriers option"
-    lengow_carrier_semantic_enable_legend: "With this option, match the carrier or shipping method indicated by the marketplace with the name of your PrestaShop carriers. This matching will be used only for marketplaces that do not indicate any carrier or shipping method."
+    lengow_carrier_semantic_enable_legend: "With this option, match the carrier or shipping method indicated by the marketplace with the name of your PrestaShop carriers."
     lengow_import_days_title: "Synchronize all orders updated since"
     lengow_import_days_legend: "Activate this option if you have incorrect pending orders. It lets you re-import all orders that have been processed during this faulty period"
     lengow_import_processing_fee_title: "Import processing fee"
