@@ -241,7 +241,7 @@ it:
     lengow_import_force_product_title: "Forzare i prodotti"
     lengow_import_force_product_legend: "Attiva questa opzione se vuoi fozare l'importazione sei tuoi prodotti non disponibili/inattivi"
     lengow_carrier_semantic_enable_title: "Voglio attivare l'opzione di corrispondenza semantica dei corrieri"
-    lengow_carrier_semantic_enable_legend: "Con questa opzione, fai corrispondere il corriere o il metodo di trasporto indicato dal marketplace con il nome dei vostri corrieri Prestashop. Questa corrispondenza sarà utilizzata unicamente per i marketplace che non trasmettono alcun corriere o metodo di trasporto."
+    lengow_carrier_semantic_enable_legend: "Con questa opzione, fai corrispondere il corriere o il metodo di trasporto indicato dal marketplace con il nome dei vostri corrieri Prestashop."
     lengow_import_days_title: "Sincronizza tutti gli ordini aggiornati da"
     lengow_import_days_legend: "Attiva questa opzione se se hai ordini sospesi incorrettamente. Ti permetterà di importare di nuovo tutti gli rodini che sono stati processati durante questo periodo di blocco"
     lengow_import_processing_fee_title: "Importare le spese di trattamento"
